gccida/c3/regclass_init
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1384:12: error: expected expression
*( _OWORD *)init_cost.cost = xmm*(short *)0x71E920; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1384:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)init_cost.cost = xmm*(short *)0x71E920; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1385:12: error: expected expression
*( _OWORD *)&init_cost.cost[4] = xmm*(short *)0x71E920; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1385:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&init_cost.cost[4] = xmm*(short *)0x71E920; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1385:34: error: use of undeclared identifier 'xmm'
*( _OWORD *)&init_cost.cost[4] = xmm*(short *)0x71E920; 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1386:12: error: expected expression
*( _OWORD *)&init_cost.cost[8] = xmm*(short *)0x71E920; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1386:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&init_cost.cost[8] = xmm*(short *)0x71E920; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1386:34: error: use of undeclared identifier 'xmm'
*( _OWORD *)&init_cost.cost[8] = xmm*(short *)0x71E920; 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1387:12: error: expected expression
*( _OWORD *)&init_cost.cost[12] = xmm*(short *)0x71E920; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1387:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&init_cost.cost[12] = xmm*(short *)0x71E920; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1387:35: error: use of undeclared identifier 'xmm'
*( _OWORD *)&init_cost.cost[12] = xmm*(short *)0x71E920; 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1388:12: error: expected expression
*( _OWORD *)&init_cost.cost[16] = xmm*(short *)0x71E920; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1388:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&init_cost.cost[16] = xmm*(short *)0x71E920; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1388:35: error: use of undeclared identifier 'xmm'
*( _OWORD *)&init_cost.cost[16] = xmm*(short *)0x71E920; 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1389:12: error: expected expression
*( _OWORD *)&init_cost.cost[20] = xmm*(short *)0x71E920; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1389:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&init_cost.cost[20] = xmm*(short *)0x71E920; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1389:35: error: use of undeclared identifier 'xmm'
*( _OWORD *)&init_cost.cost[20] = xmm*(short *)0x71E920; 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:1391:1: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
reg_pref_0 = 0LL; 
^~~~~~~~~~
reg_pref
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regclass_init/src/obj/regclass.o] Error 1
